# takumi

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bench-history.csv  benchmarks-rust-v-cyrius.md  cyrius.cyml  takumi
.github/workflows/: ci.yml
docs/adr/: 0001-ark-binary-format.md  0002-source-extraction-safety.md  0003-cli-surface.md  0004-recipe-source-model.md  0005-build-execution.md  0006-source-download.md  0007-patch-application.md  0008-v7-tar-checksum-gated-headers.md  0009-pax-extended-headers.md  0010-streaming-download.md  0011-build-sandbox.md  0012-landlock-fs-confinement.md  0013-real-package-builds.md  0014-package-signing-key.md
docs/architecture/: overview.md
docs/compliance/: security-audit-2026.md
lib/: bench.cyr  bigint.cyr  chrono.cyr  ct.cyr  fs.cyr  io.cyr  keccak.cyr  mabda.cyr  net.cyr  patra.cyr  sakshi.cyr  sandhi.cyr  sankoch.cyr  sigil.cyr  sys.cyr  syscalls_aarch64_linux.cyr  syscalls_x86_64_agnos.cyr  syscalls_x86_64_linux.cyr  tls.cyr  tls_native_conn.cyr  tls_native_ctx.cyr  tls_native_hs12.cyr  tls_native_hs13.cyr  tls_native_keysched.cyr  tls_native_lowlevel.cyr
rust-old/: Cargo.toml
rust-old/benches/: takumi_bench.rs
rust-old/src/: lib.rs
scripts/: bench-history.sh  integration.sh
src/: ark.cyr  ark_format.cyr  build.cyr  cli.cyr  engine.cyr  fetch.cyr  flags.cyr  lib.rs  main.cyr  package.cyr  parse.cyr  recipe.cyr  sandbox.cyr  source.cyr  topo.cyr  types.cyr  validate.cyr
tests/: mkfixture.cyr  takumi.bcyr  takumi.fcyr  takumi.tcyr
(+9 files in other folders)
